--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="nav">
             <a href="">Why Alivio</a>
             <a href="">Solutions</a>
-            <a href="">Community</a>
+            <a href="https://www.youtube.com/watch?v=TLNJnxDdnhs">Community</a>
             <a href="">Pricing</a>
         </nav>
     </header>
